# cmake-modbus-embedded-project

./: .clang-format  .gitignore  CMakeLists.txt  README.md
libraries/: CMakeLists.txt
libraries/libmodbus-3.1.7/: CMakeLists.txt
libraries/libmodbus-3.1.7/ports/: config.h.in  errno_def.h  modbus_port.c  modbus_port.h  modbus_rtu_port.c
libraries/libmodbus-3.1.7/src/: modbus-data.c  modbus-private.h  modbus-rtu-private.h  modbus-rtu.c  modbus.c
libraries/periph_config/: .mxproject  CMakeLists.txt  Makefile  periph_config.ioc
libraries/periph_config/Core/Inc/: main.h
libraries/periph_config/Core/Src/: main.c
libraries/periph_config/interface/: CMakeLists.txt  periph_interface.h
libraries/periph_config/stm32f407zetx/: CMakeLists.txt  Makefile  STM32F407ZETx_FLASH.ld
libraries/periph_config/stm32f407zetx/Core/Src/: stm32f4xx_it.c
libraries/periph_config/stm32f407zgtx/: .mxproject  CMakeLists.txt  Makefile  STM32F407ZGTx_FLASH.ld  periph_drv.c  stm32f407zgtx.ioc
libraries/periph_config/stm32f407zgtx/Core/Inc/: main.h
libraries/periph_config/stm32f407zgtx/Core/Src/: main.c
libraries/periph_interface/: CMakeLists.txt  periph_drv.c
main/: CMakeLists.txt  app_main.c  app_main.h
